# numhask-linear-algebra

./: .travis.yml  .weeder.yaml  README.md  makefile  numhask-linear-algebra.cabal  stack.yaml
src/Numeric/: LinearAlgebra.hs
src/Numeric/LinearAlgebra/: Internal.hs
test/: LibSpec.hs  test.hs
